--- a/FindShelter.Web/views/Jasmine/SpecRunner.html
+++ b/FindShelter.Web/views/Jasmine/SpecRunner.html
@@ -12,6 +12,7 @@
     
     <script type="text/javascript" src="/Scripts/angular.js"></script>
     <script type="text/javascript" src="/Scripts/angular-route.js"></script>
+    <script type="text/javascript" src="/Scripts/angular-sanitize.js"></script>
     <script type="text/javascript" src="/Scripts/angular-mocks.js"></script>
 
     <!-- include source files here... -->
